--- a/terceiro-ano/desenvolvimento-de-aplicativos/formula-1/assets/css/style.css
+++ b/terceiro-ano/desenvolvimento-de-aplicativos/formula-1/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(87, 87, 87);
+    background-color: rgba(146, 146, 146, 0.785);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,6 +18,5 @@ canvas {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgb(53, 53, 53);
-    border: 1px rgb(207, 207, 207) solid;
+    background-color: rgb(77, 77, 77);
 }
